docs/book/samples/appa/fn_order_check.out
error[formatting]: function declarations appear in alphabetical order: `play` before `zeta`
  --> fn_order_check.kso:4:5
   4 | pub play = print "{zeta 1}"
           ^
